--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -2,7 +2,6 @@
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://17sky35.github.io/my-portfolio/",
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^19.0.0",
@@ -38,5 +37,6 @@
   },
   "devDependencies": {
     "gh-pages": "^6.3.0"
-  }
+  },
+  "homepage": "https://17sky35.github.io/portfolio/"
 }
